--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,52 @@
-:root{
-  --primary-color:#5e503f;
-  --secondary-color:#c6ac8f;
-  --black:#0a0908;
-  --light-black:#22333b;
-  --light-grey:#adb5bd;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
+
+:root {
+  --primary-color: #5e503f;
+  --secondary-color: #c6ac8f;
+  --black: #0a0908;
+  --light-black: #22333b;
+  --light-grey: #adb5bd;
 }
-body{
-  /* color: whitesmoke; */
-  font-family: Helvetica, sans-serif;
-    font-size: 15px;
-    text-align: center;
-    color: var(--light-black);
+
+body {
+
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+  text-align: center;
+  color: var(--light-black);
 }
-button{
+
+button {
   border: none;
   background-color: transparent;
   cursor: pointer;
+  font-family: 'Roboto', sans-serif;
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+  border-radius: 5px;
 }
+a{
+  text-decoration: none;
+  color: var(--light-black);
+  margin: 10px 0px;
+}
+a:hover{
+  color: var(--black);
+  font-weight: bold;
+}
+button:disabled{
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+button:hover {
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+}
+
+input {
+  font-family: 'Roboto', sans-serif;
+}
+
 .App {
   text-align: center;
 }
@@ -51,7 +81,23 @@ button{
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+::-webkit-scrollbar {
+  width: 7px;
+
+}
+
+::-webkit-scrollbar-track {
+  background: var(--secondary-color);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--primary-color);
+  border-radius: 5px;
+
 }
