--- a/src/pages/Posts/posts.css
+++ b/src/pages/Posts/posts.css
@@ -1,19 +1,43 @@
+.post{
+   
+}
 .postCard{
-    width: 640px;
+    width: 320px;
     text-align: left;
     padding: 0.5rem;
     /* display: grid;
     grid-template-columns: 2rem 1fr; */
+    border-radius: 5px;
     position: relative;
     display: flex;
     justify-content: space-between;
     margin: 30px auto;
     box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
+@media (min-width:450px){
+    .postCard{
+        width: 400px;
+    }
+}
+@media (min-width:600px){
+    .postCard{
+        width: 500px;
+    }
+}
+@media (min-width:768px){
+    .postCard{
+        width: 600px;
+    }
+}
+@media (min-width:1024px){
+    .postCard{
+        width: 640px;
+    }
+}
 .postCard img{
     text-align: center;
 }
-.editAndDelete {
+.postCard .editAndDelete {
     position: absolute;
     right: 30px;
     top:40px;
@@ -23,16 +47,18 @@
     border-radius: 5px;
     background-color: whitesmoke;
 }
-.editAndDelete button{
+.postCard .editAndDelete .editButton,.deleteButton{
     padding: 0.5rem 1rem;
     font-size: medium;
+    border-bottom: 1px solid var(--light-grey);
+    background-color: transparent;
+    border-radius: 0;
+    color: var(--light-black);
 }
-.editAndDelete button:hover{
+.postCard .editAndDelete .editButton:hover,.deleteButton:hover{
     background-color: rgb(194, 193, 193);
 }
-.editAndDelete .editButton{
-    border-bottom: 1px solid var(--light-grey);
-}
+
 .menuButton{
     position: absolute;
     right: 20px;
@@ -54,8 +80,6 @@
     display: flex;
     flex-direction: column;
     padding: 1rem;
-   
-
 }
 .postDetails img{
     align-self: center;
@@ -65,33 +89,97 @@
     height: 100%;
     width: 100%;
 }
-.postDetails .username{
+.postDetails .username,.username{
     margin: 0;
     padding: 0;
     color: var(--light-grey);
 }
-.postDetails h3{
+.postDetails h3,.post-details h3{
     margin: 0;
+    cursor: pointer;
 }
-.postDetails .userNameAndTimestamp p{
+.postDetails h3:hover,.post-details h3:hover{
+    color: var(--black);
+}
+.postDetails .userNameAndTimestamp p,.userNameAndTimestamp p{
     margin: 0px 10px;
     color: var(--light-grey);
 }
-.postDetails .userNameAndTimestamp{
+.postDetails .userNameAndTimestamp,.userNameAndTimestamp{
     display: flex;
     align-items: center;
 }
-.postDetails .buttons button{
+.postDetails .buttons button,.post-details .buttons button{
     position: relative;
     margin: 10px;
     font-size: large;
     background-color: transparent;
     color: var(--light-black);
 }
-.buttons .likecount{
+.buttons .likecount,.post-details .likecount{
     display: inline-block;
     margin: 0;
 }
-.postDetails .buttons button:hover{
+.postDetails .buttons button:hover,.post-details .buttons button:hover{
     top:-5px
+}
+.editModal{
+    position: fixed;
+    z-index: 30;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0,0,0,.5);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    overflow-y: auto;
+        overflow-x: hidden;
+}
+.editContent{
+    background-color: whitesmoke;
+    width: 600px;
+    height: 500px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    border-radius: 10px;
+}
+.editContent .image{
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+    height: 50%;
+    width: 80%;
+    border-radius: 5px;
+}
+.editButtons{
+    display: flex;
+   align-self: flex-end;
+}
+.editButtons button{
+    margin: 10px;
+    padding: 0.5rem 1rem;
+}
+.cancel{
+    background-color: transparent;
+    border: 1.5px solid var(--primary-color);
+    color: var(--primary-color);
+    font-weight: 400;
+}
+textarea{
+    background-color: transparent;
+    width: 500px;
+    height: 9vh;
+    margin: 30px 10px;
+}
+.text{
+    display: flex;
+    align-items: center;
+}
+.avatar{
+    border-radius: 5rem;
+    margin-bottom: 40px;
 }
