--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,11 +1,14 @@
-  .content{   
-         display: flex;
-         justify-content: space-between;
-         position: relative;
+  .content {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
   }
-  header{
+
+  header {
     grid-area: h;
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+    /* box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px; */
+    /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     height: 7vh;
     text-align: center;
     font-size: 17px;
@@ -17,17 +20,26 @@
     /* left: 290px;
     width: 722px; */
     /* background-color: var(--primary-color); */
-    background: rgba(0,0,0,.5);
+    /* background: rgba(0, 0, 0, .5); */
+    background-color:white;
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: var(--primary-color);
   }
-  header h2{
-    margin: 10px 70px;
+
+  header h2 {
     font-size: 22px;
+    margin: 10px 5px;
   }
-  header input{
+  header .brand-name{
+    display: flex;
+    justify-content: space-around;
+  }
+  header .brand-name img{
+    margin: 10px 5px;
+  }
+  header input {
     border: none;
     background-color: transparent;
     color: var(--primary-color);
@@ -35,7 +47,8 @@
     border-radius: 5px;
     margin: 0px 10px;
   }
-  header .input{
+
+  header .input {
     margin: 10px 70px;
     border: 2px solid var(--primary-color);
     border-radius: 5px;
@@ -43,49 +56,62 @@
     align-items: center;
     justify-content: space-between;
   }
-  header input:focus{
+
+  header input:focus {
     outline: none;
   }
-  header input::placeholder{
+
+  header input::placeholder {
     color: var(--primary-color);
   }
-  header .input .search-icon{
+
+  header .input .search-icon {
     margin: 5px 0px;
     margin-left: 10px;
     font-size: 20px;
   }
-  main{
+
+  main {
     grid-area: m;
-    width: 350px;
+    width: 450px;
+    margin: auto;
+    padding-top: 1rem;
     margin-top: 49px;
+    /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
     border-right: 1px solid var(--light-grey);
     border-left: 1px solid var(--light-grey);
   }
-  aside{
+
+  aside {
     display: none;
     padding: 1rem 0rem;
   }
-  aside p{
+
+  aside p {
     margin: 0;
   }
-  
-  .postbutton:hover{
+
+  .postbutton:hover {
     background-color: var(--primary-color);
-  color: var(--secondary-color);
+    color: var(--secondary-color);
   }
-  input[type="file"]{
-   display: none;
+
+  input[type="file"] {
+    display: none;
   }
-  textarea{
+
+  textarea {
     border: none;
     resize: none;
     width: 70vh;
     margin: 5px 10px;
   }
-  textarea:focus{
+
+  textarea:focus {
     outline: none;
   }
-  .newpost{
+
+  .newpost {
     display: flex;
     justify-content: space-between;
     height: 10vh;
@@ -94,120 +120,147 @@
     border-radius: 10px;
     margin: auto;
   }
-  .newpost img{
+
+  .newpost img {
     margin-left: 20px;
     border-radius: 5rem;
     align-self: flex-start;
   }
-  
-   
-  .file{
+
+
+  .file {
     align-self: flex-end;
     width: 10vh;
     display: flex;
     justify-content: space-around;
-   
+    margin-right: 20px;
   }
-  .file button{
-   margin: 10px;
+
+  .file button {
+    margin: 10px;
   }
-  .file .file-icon{
+
+  .file .file-icon {
     margin: 10px 0px;
     font-size: 19px;
     cursor: pointer;
   }
-  .latestAndTrending{
+
+  .latestAndTrending {
     display: flex;
     justify-content: flex-end;
     padding: 0.5rem;
   }
-  .latestAndTrending button{
+
+  .latestAndTrending button {
     margin: 10px;
     padding: 0.3rem 0.5rem;
   }
-  .trending{
+
+  .trending {
     font-size: 15px;
     text-align: center;
   }
-  @media (min-width:768px){
-    main{
+
+  @media (min-width:600px) {
+    main {
+      width: 550px;
+      margin: auto;
+      margin-top: 49px;
+    }
+  }
+
+  @media (min-width:768px) {
+    main {
       width: 700px;
       margin-left: 150px;
     }
-    aside{
+
+    aside {
       display: none;
-      
+
     }
   }
-  @media (min-width:1024px){
-    
-    main{
+
+  @media (min-width:1024px) {
+
+    main {
       width: 720px;
       margin-left: 290px;
       margin-right: 20px;
     }
   }
-  @media (min-width:1130px){
-    aside{
+
+  @media (min-width:1130px) {
+    aside {
       grid-area: a;
       display: flex;
       flex-direction: column;
       width: 30%;
     }
-  aside{
-    position: fixed;
-    z-index: 1;
-    right: 30px;
-    margin-top: 70px;
-    /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; */
-    height: 300px;
-    width: 320px;
-    /* border-radius: 5px; */
-    
+
+    aside {
+      position: fixed;
+      z-index: 1;
+      right: 30px;
+      margin-top: 70px;
+      /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; */
+      height: 300px;
+      width: 320px;
+      /* border-radius: 5px; */
+
+    }
+
+    aside .suggestedUsers {
+      margin: 10px auto;
+      width: 270px;
+      max-height: 250px;
+      overflow-y: scroll;
+    }
+
+    aside .suggestedUsers li {
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+      margin: 10px 10px;
+      border-radius: 5px;
+
+      height: 120px;
+      display: flex;
+      flex-direction: column;
+      position: relative;
+
+    }
+
+    aside .suggestedUsers li img {
+      position: absolute;
+      top: 20px;
+      left: 10px;
+      border-radius: 5rem;
+      cursor: pointer;
+    }
+
+    aside .suggestedUsers li h3 {
+      cursor: pointer;
+      margin: 10px 0px;
+    }
+
+    aside .suggestedUsers li h3:hover {
+      color: var(--black);
+    }
+
+    aside .suggestedUsers li h3:hover {
+      color: var(--black);
+    }
+
+    aside .suggestedUsers li p {
+      margin: 0;
+      margin-left: 10px;
+      color: var(--light-grey);
+    }
+
+    aside .suggestedUsers li .follow {
+      margin-top: 20px;
+      border: 1px solid transparent;
+      align-self: center;
+
+    }
   }
-  aside .suggestedUsers{
-    margin: 10px auto;
-    width: 270px;
-    max-height: 250px;
-    overflow-y: scroll;
-  }
-  aside .suggestedUsers li{
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-    margin: 10px 10px;
-    border-radius: 5px;
-    
-    height: 120px;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    
-  }
-  aside .suggestedUsers li img{
-    position: absolute;
-    top: 20px;
-    left: 10px;
-    border-radius: 5rem;
-    cursor: pointer;
-  }
-  aside .suggestedUsers li h3{
-    cursor: pointer;
-    margin: 10px 0px;
-  }
-  aside .suggestedUsers li h3:hover{
-    color: var(--black);
-  }
-  aside .suggestedUsers li h3:hover{
-    color: var(--black);
-  }
-  aside .suggestedUsers li p{
-    margin: 0;
-    margin-left: 10px;
-    color: var(--light-grey);
-  }
-  aside .suggestedUsers li .follow{
-    margin-top: 20px;
-    border: 1px solid transparent;
-    align-self: center;
-    
-  }
-}
