--- a/src/pages/Posts/posts.css
+++ b/src/pages/Posts/posts.css
@@ -1,6 +1,3 @@
-.post{
-   
-}
 .postCard{
     width: 320px;
     text-align: left;
@@ -13,26 +10,6 @@
     justify-content: space-between;
     margin: 30px auto;
     box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
-}
-@media (min-width:450px){
-    .postCard{
-        width: 400px;
-    }
-}
-@media (min-width:600px){
-    .postCard{
-        width: 500px;
-    }
-}
-@media (min-width:768px){
-    .postCard{
-        width: 600px;
-    }
-}
-@media (min-width:1024px){
-    .postCard{
-        width: 640px;
-    }
 }
 .postCard img{
     text-align: center;
@@ -174,6 +151,7 @@ textarea{
     width: 500px;
     height: 9vh;
     margin: 30px 10px;
+    font-size: 16px;
 }
 .text{
     display: flex;
@@ -182,4 +160,24 @@ textarea{
 .avatar{
     border-radius: 5rem;
     margin-bottom: 40px;
+}
+@media (min-width:450px){
+    .postCard{
+        width: 400px;
+    }
+}
+@media (min-width:600px){
+    .postCard{
+        width: 500px;
+    }
+}
+@media (min-width:768px){
+    .postCard{
+        width: 600px;
+    }
+}
+@media (min-width:1024px){
+    .postCard{
+        width: 640px;
+    }
 }
