--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -6,22 +6,15 @@
 
   header {
     grid-area: h;
-    /* box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px; */
-    /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     height: 7vh;
     text-align: center;
     font-size: 17px;
     position: fixed;
-    /* background-color: var(--light-black); */
     z-index: 1;
     left: 0;
     right: 0;
-    /* left: 290px;
-    width: 722px; */
-    /* background-color: var(--primary-color); */
-    /* background: rgba(0, 0, 0, .5); */
-    background-color:white;
+    background-color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -31,14 +24,19 @@
   header h2 {
     font-size: 22px;
     margin: 10px 5px;
+
   }
-  header .brand-name{
+
+  header .brand-name {
     display: flex;
     justify-content: space-around;
+    cursor: pointer;
   }
-  header .brand-name img{
+
+  header .brand-name img {
     margin: 10px 5px;
   }
+
   header input {
     border: none;
     background-color: transparent;
@@ -72,12 +70,11 @@
   }
 
   main {
-    grid-area: m;
+    
     width: 450px;
     margin: auto;
     padding-top: 1rem;
     margin-top: 49px;
-    /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
     border-right: 1px solid var(--light-grey);
     border-left: 1px solid var(--light-grey);
   }
@@ -127,6 +124,9 @@
     align-self: flex-start;
   }
 
+  .newpost .new-post-img {
+    border-radius: 5px;
+  }
 
   .file {
     align-self: flex-end;
@@ -193,22 +193,14 @@
 
   @media (min-width:1130px) {
     aside {
-      grid-area: a;
-      display: flex;
-      flex-direction: column;
-      width: 30%;
-    }
-
-    aside {
       position: fixed;
       z-index: 1;
       right: 30px;
       margin-top: 70px;
-      /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; */
       height: 300px;
       width: 320px;
-      /* border-radius: 5px; */
-
+      display: flex;
+      flex-direction: column;
     }
 
     aside .suggestedUsers {
